syntax = "proto2";

package shared.authservicepb.v1;

option go_package = "wz2100.net/microlobby/shared/proto/authservicepb/v1;authservicepb";

import "google/protobuf/empty.proto";
import "shared/proto/userpb/v1/userpb.proto";

service AuthService {
    rpc UserList(UserListRequest) returns (UserListResponse) {}
    rpc UserDetail(UserIDRequest) returns (shared.userpb.v1.User) {}
    rpc UserDelete(UserIDRequest) returns (google.protobuf.Empty) {}
}

message UserListRequest {
    optional uint64 limit = 1 [default = 10];
    optional uint64 offset = 2 [default = 0];
}

message UserListResponse {
    message User {
        required string id = 1;
        required string sub = 2;
        required string email = 3;
    }

    repeated User data = 1;
    required uint64 count = 2;
    required uint64 limit = 3;
    required uint64 offset = 4;
}

message UserIDRequest {
    required string userId = 1;
}